--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -14,7 +14,7 @@
 }
 
 .value {
-  font-size: 78px;
+  font-size: 20px;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 2px;
@@ -24,7 +24,7 @@
 .button {
   appearance: none;
   background: none;
-  font-size: 32px;
+  font-size: 16px;
   padding-left: 12px;
   padding-right: 12px;
   outline: none;
@@ -38,7 +38,7 @@
 }
 
 .textbox {
-  font-size: 32px;
+  font-size: 22px;
   padding: 2px;
   width: 64px;
   text-align: center;
@@ -76,4 +76,8 @@
   width: 0%;
   opacity: 1;
   transition: 0s;
+}
+
+.container {
+  margin: 7px;
 }
