--- a/src/index.css
+++ b/src/index.css
@@ -102,13 +102,13 @@ section {
 }
 
 section h1 {
-  font-size: 3rem;
+  font-size: 1.6rem;
 }
 
 /* Posts list */
 
 .post h2 {
-  font-size: 2.5rem;
+  font-size: 1.1rem;
   margin-bottom: 5px;
 }
 
@@ -128,7 +128,7 @@ section h1 {
 
 .post-excerpt h3 {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 p.post-content {
@@ -141,6 +141,7 @@ p.post-content {
   color: white;
   border-radius: 4px;
   font-weight: 700;
+  font-size: 16px;
   padding: 0.75rem 1.5rem;
 }
 
@@ -284,4 +285,8 @@ button.reaction-button {
 
 .muted-button {
   border: none;
+}
+
+.add-new-post h2 {
+    font-size: 18px;
 }
